@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-16T08:32:31Z",
+  "timestamp" : "2022-06-16T16:34:27Z",
   "count_outdated" : 188,
   "uniques_outdated" : 85,
-  "count" : 213,
+  "count" : 214,
   "uniques" : 101,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
